--- a/src/index.css
+++ b/src/index.css
@@ -82,7 +82,8 @@
 }
 
 .greenscreen {
-    background: #d4ecba;
+    /* background: #d4ecba; */
+    background: linear-gradient(180deg, rgba(136, 203, 64, 0.36) 0%, rgba(57, 156, 219, 0.36) 100%);
 }
 
 @layer components {
